[package]
name = "async-sqlx-session"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "sqlx session store for async-session"
readme = "README.md"
repository = "https://github.com/jbr/async-sqlx-session"
documentation = "https://docs.rs/async-sqlx-session"
license = "MIT OR Apache-2.0"
keywords = ["sessions", "sqlx", "sqlite", "postgres", "mysql"]
categories = ["web-programming::http-server", "web-programming", "database"]

[package.metadata.docs.rs]
features = ["pg", "sqlite", "mysql"]

[features]
default = []
sqlite = ["sqlx/sqlite"]
pg = ["sqlx/postgres", "sqlx/json"]
native-tls = ["sqlx/runtime-async-std-native-tls"]
rustls = ["sqlx/runtime-async-std-rustls"]
mysql = ["sqlx/mysql", "sqlx/json"]

[dependencies]
async-session = { git = "https://github.com/http-rs/async-session", branch = "overhaul-session-and-session-store", default-features = false }
sqlx = { version = "0.6.2", features = ["time"] }
log = "0.4.17"
serde_json = "1.0.93"
serde = "1.0.152"
thiserror = "1.0.38"
time = "0.3.18"
base64 = "0.21.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[dev-dependencies.sqlx]
version = "0.6.2"
features = ["runtime-async-std-native-tls"]
