[package]
name = "async-sqlx-session"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "sqlx session store for async-session"
readme = "README.md"
repository = "https://github.com/jbr/async-sqlx-session"
documentation = "https://docs.rs/async-sqlx-session"
license = "MIT OR Apache-2.0"
keywords = ["sessions", "sqlx", "sqlite", "postgres", "mysql"]
categories = ["web-programming::http-server", "web-programming", "database"]

[package.metadata.docs.rs]
features = ["pg", "sqlite", "mysql", "async_std"]

[features]
sqlite = ["sqlx/sqlite"]
pg = ["sqlx/postgres", "sqlx/json"]
mysql = ["sqlx/mysql", "sqlx/json"]

async_std = ["dep:async-std"]

[dependencies]
async-session = "3.0.0"
sqlx = { version = "0.6.3", features = ["chrono"] }
async-std = { version = "1.12.0", optional = true }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[dev-dependencies.sqlx]
version = "0.6.3"
features = ["chrono", "runtime-async-std-native-tls"]
