[package]
name = "async-sqlx-session"
version = "0.4.0"
authors = ["Jacob Rothstein <hi@jbr.me>"]
edition = "2018"
description = "sqlx session store for async-session"
readme = "README.md"
repository = "https://github.com/jbr/async-sqlx-session"
documentation = "https://docs.rs/async-sqlx-session"
license = "MIT OR Apache-2.0"
keywords = ["sessions", "sqlx", "sqlite", "postgres", "mysql"]
categories = ["web-programming::http-server", "web-programming", "database"]

[package.metadata.docs.rs]
features = ["pg", "sqlite", "mysql", "async_std"]

[features]
default = ["native-tls"]
sqlite = ["sqlx/sqlite"]
pg = ["sqlx/postgres", "sqlx/json"]
native-tls = ["sqlx/runtime-async-std-native-tls"]
rustls = ["sqlx/runtime-async-std-rustls"]
async_std = ["async-std"]
mysql = ["sqlx/mysql", "sqlx/json"]

[dependencies]
async-session = { git = "https://github.com/http-rs/async-session", branch = "main"}
sqlx = { version = "0.7.1", features = [ "time" ] }
async-std = { version = "1.12.0", optional = true }
time = "0.3.18"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }

[dev-dependencies.sqlx]
version = "0.7.1"
features = ["runtime-async-std-native-tls"]
